# videogen

./: LICENSE  Makefile  README.md  SPEC.md  avm.py  env.sample  pyproject.toml  requirements.txt  styles.yml
avm/: __init__.py
avm/examples/: slides.md
avm/pipeline/: __init__.py  assemble.py  audio.py  captions.py  config.py  doctor.py  errors.py  export.py  io_paths.py  logging.py  mux.py  slides.py  storyboard.py  testing.py  thumb.py  timeline.py  transcribe.py  video.py
avm/projects/demo/: config.yml  slides.md
avm/templates/: slide.html  thumb.html
avm/tests/: test_captions.py  test_timeline.py
projects/demo/: slides.md
templates/: slide.html
